--- a/[POO][Aula - Classes][Vitor e Darline]/estilos.css
+++ b/[POO][Aula - Classes][Vitor e Darline]/estilos.css
@@ -7,6 +7,7 @@
     border-radius: 16px;
     border: 1px solid #000000;
     padding: 20px;
+
 }
 
 .info{
@@ -17,6 +18,9 @@
     width: 220px;
     height: 300px;
     object-fit: cover;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 .info .modelo{
